--- a/rechordly_app/wear/src/main/res/values/strings.xml
+++ b/rechordly_app/wear/src/main/res/values/strings.xml
@@ -19,4 +19,9 @@
     <string name="title_activity_effects_chooser">EffectsChooserActivity</string>
     <string name="title_activity_effects">EffectsActivity</string>
     <string name="long_press_intro">Long Press Intro</string>
+    <string name="title_activity_record">RecordActivity</string>
+    <string name="exiting_for_permissions">Recording Audio permission is required, exiting now!</string>
+    <string name="no_speaker_supported">Speaker is not supported</string>
+
 </resources>
+
