--- a/rechordly_app/mobile/src/main/res/values/strings.xml
+++ b/rechordly_app/mobile/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_info">InfoActivity</string>
     <string name="title_activity_edit">EditActivity</string>
+    <string name="title_activity_playback">PlaybackActivity</string>
 </resources>
