--- a/rechordly_app/wear/src/main/res/values/strings.xml
+++ b/rechordly_app/wear/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="title_activity_record">RecordActivity</string>
     <string name="exiting_for_permissions">Recording Audio permission is required, exiting now!</string>
     <string name="no_speaker_supported">Speaker is not supported</string>
+    <string name="title_activity_main2">Main2Activity</string>
 
 </resources>
 
