added crop screens

--- a/rechordly_app/wear/src/main/res/values/strings.xml
+++ b/rechordly_app/wear/src/main/res/values/strings.xml
@@ -30,6 +30,8 @@
     <string name="title_activity_name">NameActivity</string>
     <string name="title_activity_home_vocals_music">HomeVocalsMusicActivity</string>
     <string name="title_activity_resume">ResumeActivity</string>
+    <string name="title_activity_main3">Main3Activity</string>
+    <string name="title_activity_crop_back">CropBackActivity</string>
 
 </resources>
 
