--- a/rechordly_app/wear/src/main/res/values/strings.xml
+++ b/rechordly_app/wear/src/main/res/values/strings.xml
@@ -46,6 +46,7 @@
     <string name="title_activity_filter_high_low">FilterHighLow</string>
     <string name="title_activity_echo_chooser">EchoChooserActivity</string>
     <string name="title_activity_speech_to_text">SpeechToTextActivity</string>
+    <string name="title_activity_gain_chooser">GainChooserActivity</string>
 
 </resources>
 
